--- a/DesignPatterns/ObserverPattern.html
+++ b/DesignPatterns/ObserverPattern.html
@@ -150,6 +150,9 @@
                                         </div>
 
                                         <hr class="major" />
+                                        <h2>討論</h2>
+
+                                        <hr class="major" />
     
                                         <h2>範例網址</h2>
                                         <a href="https://github.com/Singularity-one/DesignPatterns/blob/main/src/ObserverPattern.java">範例網址</a><br>
