--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 									<p>主要參考深入淺出 設計模式</p>
 									<ul class="actions">
 										<li><a href="DesignPatterns/ObserverPattern.html">觀察者模式(Observer Pattern)</a></li><br />
+										<li><a href="DesignPatterns/DecoratorPattern.html">裝飾者模式(Decorator Pattern)</a></li><br />
 										<li><a href="Java/1_5.html">第二天</a></li><br />
 										<li><a href="#" class="button big">Learn More</a></li>
 									</ul>
