--- a/DesignPatterns/ObserverPattern.html
+++ b/DesignPatterns/ObserverPattern.html
@@ -23,7 +23,8 @@
                         <!-- Content -->
 						<section>
                                         <header class="main">
-                                            <h1>觀察者模式&emsp;Observer Pattern</h1>
+                                            <h1>觀察者模式</h1>
+                                            <h2>Observer Pattern</h2>
                                         </header>
     
                                         <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
