--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 									<ul class="actions">
 										<li><a href="DesignPatterns/ObserverPattern.html">觀察者模式(Observer Pattern)</a></li><br />
 										<li><a href="DesignPatterns/DecoratorPattern.html">裝飾者模式(Decorator Pattern)</a></li><br />
+										<li><a href="DesignPatterns/Factory&AbstractFactoryPattern.html">工廠和抽象工廠模式(Factory & Abstract Factory Pattern)</a></li><br />
 										<li><a href="Java/1_5.html">第二天</a></li><br />
 										<li><a href="#" class="button big">Learn More</a></li>
 									</ul>
