--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
 										<p>Design Patterns</p>
 									</header>
 									<p>主要參考深入淺出 設計模式</p>
-									<ul class="actions">
-										<li><a href="DesignPatterns/ObserverPattern.html">觀察者模式(Observer Pattern)</a></li><br />
-										<li><a href="DesignPatterns/DecoratorPattern.html">裝飾者模式(Decorator Pattern)</a></li><br />
-										<li><a href="DesignPatterns/Factory&AbstractFactoryPattern.html">工廠和抽象工廠模式(Factory & Abstract Factory Pattern)</a></li><br />
-										<li><a href="DesignPatterns/SingletonPattern.html">單例模式(Singleton Pattern)</a></li><br />
-										<li><a href="Java/1_5.html">第二天</a></li><br />
-										<li><a href="#" class="button big">Learn More</a></li>
+									<ul>
+										<li><a href="DesignPatterns/ObserverPattern.html">觀察者模式(Observer Pattern)</a></li>
+										<li><a href="DesignPatterns/DecoratorPattern.html">裝飾者模式(Decorator Pattern)</a></li>
+										<li><a href="DesignPatterns/Factory&AbstractFactoryPattern.html">工廠和抽象工廠模式(Factory & Abstract Factory Pattern)</a></li>
+										<li><a href="DesignPatterns/SingletonPattern.html">單例模式(Singleton Pattern)</a></li>
+										<li><a href="DesignPatterns/CommandPattern.html">命令模式(Command Pattern)</a></li>
+										<li><a href="DesignPatterns/AdapterPattern.html">轉接器模式(Adapter Pattern)</a></li>
+										<li><a href="DesignPatterns/FacadePattern.html">表象模式(Facade Pattern)</a></li>
+										<li><a href="DesignPatterns/TemplateMethodPattern.html">樣板方法模式(Template Method Pattern)</a></li>
+										<li><a href="DesignPatterns/StatePattern.html">狀態模式(State Pattern)</a></li>
+										<li><a href="DesignPatterns/ProxyPattern.html">代理人模式(Proxy Pattern)</a></li>
 									</ul>
 								</div>
 							</section>
