Joy //Strategy Pattern

--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
 							<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h1>Java 100天</h1>
+											<p>基本Java 到 Spring boot</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
-											<li><a href="Java/1_5.html">第一天</a></li><br />
+										<p>參照Python 100天的學習紀錄</p>
+										<ul>
+											<li><a href="Java100Day/1Week.html">第一週</a></li><br />
 											<li><a href="Java/1_5.html">第二天</a></li><br />
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -58,6 +57,7 @@
 									</header>
 									<p>主要參考深入淺出 設計模式</p>
 									<ul>
+										<li><a href="DesignPatterns/StrategyPattern.html">策略模式(Strategy Pattern)</a></li>
 										<li><a href="DesignPatterns/ObserverPattern.html">觀察者模式(Observer Pattern)</a></li>
 										<li><a href="DesignPatterns/DecoratorPattern.html">裝飾者模式(Decorator Pattern)</a></li>
 										<li><a href="DesignPatterns/Factory&AbstractFactoryPattern.html">工廠和抽象工廠模式(Factory & Abstract Factory Pattern)</a></li>
@@ -68,6 +68,7 @@
 										<li><a href="DesignPatterns/TemplateMethodPattern.html">樣板方法模式(Template Method Pattern)</a></li>
 										<li><a href="DesignPatterns/StatePattern.html">狀態模式(State Pattern)</a></li>
 										<li><a href="DesignPatterns/ProxyPattern.html">代理人模式(Proxy Pattern)</a></li>
+										<li><a href="DesignPatterns/CompoundPattern.html">複合模式(Compound Pattern)</a></li>
 									</ul>
 								</div>
 							</section>
