Joy //lost Composite Pattern

--- a/DesignPatterns/StrategyPattern.html
+++ b/DesignPatterns/StrategyPattern.html
@@ -105,7 +105,7 @@
                                     <p>利用不同物件設定Context物件，讓Context物件去執行各種演算法得出不同結果</p>
 
                                     <hr class="major" />
-                                    <h2>Java上實際應用舉例：Servlet的策略模式和模板方法模式</h2>
+                                    <h2>Java上實際應用舉例：Servlet的策略模式和樣板方法模式</h2>
 
                                     <h2>UML概念</h2>
 
@@ -137,8 +137,13 @@
                                     <p>HttpServlet 透過繼承GenericServlet實現Servlet介面，servlet開發者可以重寫doGet,doPost對應Http請求的類型方法</p>
 
                                     <hr class="major" />
+    
+                                    <h2>相關</h2>
+                                    <a href="TemplateMethodPattern.html">樣板方法模式(Template Method Pattern)</a><br>
+
+                                    <!-- <hr class="major" />
                                     <h2>範例網址</h2>
-                                    <a href="https://github.com/Singularity-one/DesignPatterns/blob/main/src/StrategyPattern.java">範例網址</a><br>
+                                    <a href="https://github.com/Singularity-one/DesignPatterns/blob/main/src/StrategyPattern.java">範例網址</a><br> -->
 
 
                     </section>
