--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 										<li><a href="DesignPatterns/AdapterPattern.html">轉接器模式(Adapter Pattern)</a></li>
 										<li><a href="DesignPatterns/FacadePattern.html">表象模式(Facade Pattern)</a></li>
 										<li><a href="DesignPatterns/TemplateMethodPattern.html">樣板方法模式(Template Method Pattern)</a></li>
+										<li><a href="DesignPatterns/IteratorPattern.html">反覆器模式(Iterator Pattern)</a></li>
+										<li><a href="DesignPatterns/CompositePattern.html">合成模式(Composite Pattern)</a></li>
 										<li><a href="DesignPatterns/StatePattern.html">狀態模式(State Pattern)</a></li>
 										<li><a href="DesignPatterns/ProxyPattern.html">代理人模式(Proxy Pattern)</a></li>
 										<li><a href="DesignPatterns/CompoundPattern.html">複合模式(Compound Pattern)</a></li>
